--- a/dtlcatalog/templates/catalog/category.html
+++ b/dtlcatalog/templates/catalog/category.html
@@ -1,5 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<h1>{{ category.name }}</h1>
+{{ category.description }}
+<br /><br />
+{% for p in products %}
+<div class="row">
+    <div class="col-lg-3">
+        <div class="card">
+            <img src="{{ p.image.url }}" class="card-img-top" height="100%", width="100%" />
+            <div class="card-footer">
+                <a href="{% url 'catalog:show_product' p.slug %}">
+                    {{ p.name }}
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
 {% endblock %}
