--- a/dtlcatalog/templates/categories.html
+++ b/dtlcatalog/templates/categories.html
@@ -3,8 +3,20 @@
     <div class="col-12">
         <ul>
             {% for c in categories %}
-                <li><a href="{% url 'catalog:show_category' c.slug %}">{{ c.name }}</a></li>
+            <li><a href="{% url 'catalog:show_category' c.slug %}">{{ c.name }}</a></li>
             {% endfor %}
+
+            {% with active_categories as cats %}
+            {% for c in cats %}
+            <li>
+                {% ifequal c.get_absolute_url request_path %}
+                {{ c.name }}<br />
+                {% else %}
+                <a href="{% url 'catalog:show_category' c.slug %}" class="btn btn-link text-reset">{{ c.name }}</a><br />
+                {% endifequal %}
+            </li>
+            {% endfor %}
+            {% endwith %}
         </ul>
     </div>
 </div>
