--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load cart_filters %}
 {% block header %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
     <a href="{% url 'index' %}" class="navbar-brand mb-0 h1">E-Commerce</a>
@@ -11,6 +12,7 @@
                 <!-- <a href="" class="nav-link">Clientes</a> -->
             </li>
         </ul>
+        {% cart_box request %}
         {% if user.is_authenticated %}
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
